Fix for footer appearing in middle of questions in manager on small devices.
git-svn-id: svn+ssh://svn.bmc.uu.se/cbe/openexam-php/trunk@3447 58b8aac4-d633-40de-91bf-eab09b0297ab

--- a/phalcon-mvc/public/css/standard.css
+++ b/phalcon-mvc/public/css/standard.css
@@ -88,6 +88,7 @@ img {
     padding: 10px 0;
     text-align: center;
     height: 100px;
+    clear: both;
 }
 #oe-footer a {
     color: inherit;
